# stockBoard

./: .gitignore  Procfile  README.md  app.py  index.ipynb  index.py  pyproject.toml  records  requirements.txt  requirements_bak.txt  setup.py  stockBoard.ipynb
.github/: action-black.yml
AppData/: __init__.py  analysis.py  charts.py  dashBoard.py  dev.py  tradeBot.py  tradingStrategies.py  updateData.py  update_data_bak.py
StockBoard/: SetupData.ipynb  stockBoard.ipynb
StockBoard.egg-info/: PKG-INFO  SOURCES.txt
assets/: README.md  ind_nifty500list.csv  templateCode.py  token_mapping.csv  token_symbol.csv
data/: dailyStockData.py  dfInvest.csv  dfSell.csv  getStockData.py  metadata.json  symbolMapping.csv
data/archiveData/: bpcl.pickle  infy.pickle  ongc.pickle  reliance.pickle
data/stockData/: BPCL.csv  INFY.csv  ONGC.csv  RELIANCE.csv  SBIN.csv  bpcl.csv  infy.csv  ongc.csv  reliance.csv
docs/: README.md  dash_help.md  fireBase.md
experiments/: RSI.ipynb  Stochastic Oscillator.ipynb  learn Async IO.ipynb  multiprocessing and multithreading.ipynb  multiprocessing.ipynb  records  smart_api_test.ipynb
profiles/: README.md  passwords.cfg
profiles/abhishek/: dfInvest.csv
profiles/alvin369/: dfBuy.csv  dfInvest.csv  dfSell.csv  (+1 more)
scripts/: Extract Mapping .ipynb  SetupData.ipynb  StockBoard.py  StockData.py  StockInfo.py  __init__.py  newFeatureTest.ipynb  stockBoard.ipynb  tradingStrategies_dev.ipynb
test/: =  pythonTest.py  test_basic.py  testing.py
tradingStrategies/: backtest.py  backtestFast.py  backtest_dev.ipynb  instructions.md
(+1324 files in other folders)
